Update ClickClinic project with backend API integration and Vercel deployment setup

--- a/frontend/doctor-dashboard.html
+++ b/frontend/doctor-dashboard.html
@@ -64,7 +64,7 @@
 
     document.getElementById("doctorName").textContent = user.name;
 
-    fetch("https://quickclinic-backend.onrender.com/api/bookings/doctor", {
+    fetch("https://clinic-backend-5b4v.onrender.com/api/bookings/doctor", {
       headers: {
         "Authorization": `Bearer ${token}`
       }
